--- a/dashboard.html
+++ b/dashboard.html
@@ -1,17 +1,56 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fleet Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <title>Fleet Management Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 30px;
+        }
+        h1 {
+            color: #333;
+        }
+        table {
+            border-collapse: collapse;
+            width: 80%;
+        }
+        th, td {
+            text-align: left;
+            padding: 10px;
+            border: 1px solid #ccc;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
-<body class="p-4">
-    <h1>Fleet Dashboard</h1>
-    <div class="card p-3">
-        <p><strong>Vehicle:</strong> Toyota Prius</p>
-        <p><strong>Miles Driven:</strong> 12,450</p>
-        <p><strong>Fuel Level:</strong> 42%</p>
-        <p class="text-danger">Maintenance Required Soon</p>
-    </div>
+<body>
+    <h1>Fleet Usage Data</h1>
+    <table id="usageTable">
+        <thead>
+            <tr>
+                <th>Vehicle ID</th>
+                <th>Miles Driven</th>
+                <th>Fuel Used (gallons)</th>
+                <th>Last Service</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <script>
+        fetch("/data")
+            .then(response => response.json())
+            .then(data => {
+                const table = document.getElementById("usageTable").getElementsByTagName("tbody")[0];
+                data.forEach(item => {
+                    const row = table.insertRow();
+                    row.insertCell(0).innerText = item.vehicle_id;
+                    row.insertCell(1).innerText = item.miles;
+                    row.insertCell(2).innerText = item.fuel_used;
+                    row.insertCell(3).innerText = item.last_service;
+                });
+            });
+    </script>
 </body>
 </html>
